FIX: User icon was jumping from the left to the right every time a screen was loading

--- a/src/gui02/components/ScreenToolbar/ScreenToolbar.module.scss
+++ b/src/gui02/components/ScreenToolbar/ScreenToolbar.module.scss
@@ -5,6 +5,7 @@
   flex-direction: row;
   align-items: center;
   padding: 0 1em 0 0;
+  justify-content: flex-end;
 
   :global(.Dropdowner_dropdownerContainer) {
     :global(.ScreenToolbarAction_root) {
